@@ -54,6 +54,43 @@ int range_str2inbuf(const void* buf,size_t len,const void* stringstart);
 /* does an UTF-32 string starting at "ptr" lie in buf[0..len-1]? */
 int range_str4inbuf(const void* buf,size_t len,const void* stringstart);
 
+
+/* I originally omitted addition and substraction because it appeared
+ * trivial.  You could just add the two numbers and see if it was
+ * smaller than either of them.  This always worked for me because I
+ * only cared about unsigned arithmetic, but for signed arithmetic,
+ * adding two numbers is undefined if the result does not fit in the
+ * int.  gcc has started to actually use this undefinedness to screw
+ * you.  The following code illustrates this:
+ *   int a=INT_MAX,b=a+5;
+ *   if (b<a) abort();  // whole statement optimized away by gcc 4.1
+ *   // at this point, b<a
+ * So I decided to add some integer overflow protection functionality
+ * here for addition and subtraction, too. */
+
+/* first, we need a type independent way to find the min and max values
+ * for each type, so the macros also work for integer types you defined
+ * yourself */
+
+#define __MIN_UNSIGNED(type) ((type)0)
+#define __MIN_SIGNED(type) (((type)-1)<<(sizeof(type)*8-1))
+
+#define __MAX_UNSIGNED(type) (((type)-1))
+#define __MAX_SIGNED_TEMP(type) (((type)1)<<(sizeof(type)*8-2))
+#define __MAX_SIGNED(type) (__MAX_SIGNED_TEMP(type)+(__MAX_SIGNED_TEMP(type)-1))
+
+/* we use <1 and not <0 to avoid a gcc warning */
+#define __MAX(type) ((type)-1 < 1?__MAX_SIGNED(type):__MAX_UNSIGNED(type))
+#define __MIN(type) ((type)-1 < 1?__MIN_SIGNED(type):__MIN_UNSIGNED(type))
+
+#define assign(dest,src) ({ typeof(src) __x=src; typeof(dest) __y=__x; (__x==__y && ((__x<1) == (__y<1))?(int)(dest=__y),0:1); })
+
+/* if a+b is defined and does not have an integer overflow, do c=a+b and
+ * return 0.  Otherwise, return 1. */
+#define add_of(c,a,b) ({ typeof(a) __a=a; typeof(b) __b=b; (__b)<1?((__MIN(typeof(c))-(__b)<=(__a))?assign(c,__a+__b):1) : ((__MAX(typeof(c))-(__b)>=(__a))?assign(c,__a+__b):1); })
+
+#define sub_of(c,a,b) ({ typeof(a) __a=a; typeof(b) __b=b; (__b)<1?((__MAX(typeof(c))-(__b)>=(__a))?assign(c,__a-__b):1) : ((__MIN(typeof(c))+(__b)<=(__a))?assign(c,__a-__b):1); })
+
 #undef __static
 
 #endif
